# rusty_dreams

./: .env  .gitignore  Cargo.toml  README.md  data  message_docs.html  test.csv  todo
client/: Cargo.toml
client/src/: main.rs
crate_client/: Cargo.toml
crate_client/src/: backend.rs  frontend.rs  main.rs  read_task.rs  save_file.rs  write_task.rs
crate_message/: Cargo.toml
crate_message/src/: buffer.rs  build_message.rs  error.rs  lib.rs  location.rs  logging_in.rs  login_form.rs  message.rs  send_message.rs  task.rs  user.rs
crate_message/src/tests/: mod.rs
crate_server/: Cargo.toml
crate_server/src/: accepting_task.rs  auth.rs  broadcasting_task.rs  check_db.rs  db.rs  listening_task.rs  main.rs  task.rs  task_type.rs  web.rs  web_task.rs
crate_server/src/broadcasting_task/: broadcast_message.rs  mod.rs
crate_server/src/database_operations/: check_db.rs  message_into_db.rs  mod.rs
crate_server/src/listening_task/: mod.rs  read_from_socket.rs
crate_server/src/web_task/: check_login_return_answer.rs  mod.rs
crate_web/: Cargo.toml
crate_web/src/: _main.rs  args.rs  connect_to_server.rs  get_template.rs  handlebars.rs  logger.rs  login_backend.rs  main.rs
crate_web/src/auth/: login_backend.rs  mod.rs  receive_login_result.rs  send_login_attempt.rs
crate_web/static/: chat.html  index.html  script.js  style.css
crate_web/templates/: chat.html  login.html
media/default/: data
message/: Cargo.toml
message/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs
src/: command.rs  interactive.rs  lib.rs  main.rs  modifications.rs  my_error.rs  parse_command.rs  parse_csv.rs  parse_execute.rs
