[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
message = { path="../crate_message" }
bincode = "1.3.3"
serde = { version = "1.0.190", features = ['derive']}
names = "0.14.0"
crossterm = "0.25.0"
chrono = "0.4"
log = "0.4.20"
env_logger = "0.10.1"
clap = { version = "4.4.8", features = ['derive']}
anyhow = "1.0.75"
tokio = { version = "1.34.0", features = ["full"] }
