[package]
name = "message"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0.190", features = ['derive']}
crossterm = "0.25.0"
chrono = "0.4"
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["full"] }
