[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
message = { path="../crate_message" }
log = "0.4.20"
env_logger = "0.10.1"
clap = { version = "4.4.8", features = ['derive']}
anyhow = "1.0.75"
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["full"] }
tokio-postgres = "0.7"
flume = "0.11.0"
chrono = "0.4"
futures = "0.3.29"
sqlx = {version = "0.7.3", features = [ "runtime-tokio", "postgres" ] }
dotenv = "0.15.0"
