[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
ws = { package = "rocket_ws", version = "0.1.0" }
handlebars = "4.5.0"
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.10.1"
chrono = "0.4"
clap = { version = "4.4.8", features = ['derive']}
log = "0.4.20"
anyhow = "1.0.75"
tokio = { version = "1.34.0", features = ["full"] }
message = { path="../crate_message" }
flume = "0.11.0"
bincode = "1.3.3"
